--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,19 @@
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
     "@types/express": "^4.17.21",
+    "clarifai-nodejs-grpc": "^10.8.4",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
+    "socket.io": "^4.7.5",
+    "streamifier": "^0.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/cors": "^2.8.17",
+    "@types/streamifier": "^0.1.2"
   }
 }
