--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,5 +10,5 @@
     "noImplicitAny": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "src/index.d.ts"]
 }
