--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5",
     "streamifier": "^0.1.1",
     "ts-node": "^10.9.2",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.12",
     "@types/streamifier": "^0.1.2"
   }
 }
