edited routes and package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon",
+    "build": "tsc",          
+    "start": "node dist/server.js",  
+    "dev": "nodemon" ,
     "type": "module"
   },
   "keywords": [],
