--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",          
-    "start": "node dist/server.js",  
-    "dev": "nodemon" ,
+    "build": "npm run compile && npm run copy-public",
+    "compile": "tsc",
+    "start": "node dist/server.js",
+    "copy-public": "copyfiles -u 1 src/public/**/* dist/",
+    "dev": "nodemon",
     "type": "module"
   },
   "keywords": [],
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/multer": "^1.4.12",
-    "@types/streamifier": "^0.1.2"
+    "@types/streamifier": "^0.1.2",
+    "copyfiles": "^2.4.1"
   }
 }
